[package]
name = "use_bell_person"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prover-service = { git = "https://github.com/matter-labs/era-heavy-ops-service.git", branch = "v1.3.3", features = ["legacy"], default-features = false }
zkevm_test_harness = { git = "https://github.com/matter-labs/era-zkevm_test_harness.git", branch = "v1.3.3" }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", features = ["compat"] }
serde_json = "1.0"
hex = "0.4"
queues = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
#rand = "0.4"
bincode = "1.3.2"
bellperson={ version="0.25.0", features = ["opencl"] }


ff = "0.13.0"
pairing = "0.23"
rand = { version = "0.8", default-features = false }
sha2 = "0.10.6"
blstrs = { version = "0.7.0", features = ["__private_bench"] }

